[tool.poetry]
name = "sramplatform"
version = "0.1.0"
description = ""
authors = ["Sergio Vinagrero <servinagrero@gmail.com>"]
homepage = "https://servinagrero.github.io/SRAMPlatform"
repository = "https://github.com/servinagrero/SRAMPlatform"
license = "GPL-2.0"
include = [
    "LICENSE",
]

packages = [{include = "sramplatform"}]

keywords = ["sram", "microcontroller", "automation"]
readme = "README.md"
classifiers = [
  "License :: OSI Approved :: GPL 2.0 License",
  "Programming Language :: Python",
]

[tool.poetry.dependencies]
python = "^3.8"
pika = "^1.3.0"
SQLAlchemy = "^1.4.41"
pyserial = "^3.5"
yagmail = {version = "*", extras = ["all"], optional = true}
pyTelegramBotAPI = {version = "*", optional = true}

[tool.poetry.extras]
loggers = ["yagmail", "pyTelegramBotAPI"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
